Main works for Alex now
(cherry picked from commit b63cd85b588b905b8b6bacfc9fe21277899ea8b3)

# Conflicts:
#	src/main/java/Main.java